JAKARTA TOMCAT CONNECTORS (JK) CHANGELOG:			-*-text-*-
Last modified at [$Date$]

Changes with JK 1.2.3:
    * Add JkAutoAlias to Apache 2.0
      [glenn]
    * Apache 2/1.3, if Tomcat returns an error but not content,
      let Apache handle processing the error returned by Tomcat.

Changes with JK 1.2.2:
    * tomcat_trend.pl updated script to support changed logging of 
      aborted requests
      [glenn]
    * jk set correctly the content-type in Apache 2.0,
      making it ready to works with mod_deflate and AddOutputFilterByType 
      [hgomez]
    * jk will check result of get_endpoint and handle a failure.
      This call can fail if the allocation for the endpoint fails because of low memory conditions 
      causing a dereference of NULL when we try and access the endpoint
      [mmanders]
      
Changes with JK 1.2.1:
    * Don't send initial chunk for chunked encoding, fix #14282
      [costin]
    * Add perl scripts for analyzing mod_jk logs and generating graphs/reports  
      [glenn]
    * Make JK honor the CanonicalHost directive.
      [hgomez]
    * Log cleanup
      [costin]
    * Fix typos in jk xdocs/docs
      [hgomez]
    * Add JkRequestLogFormat to Apache 2.0
      [hgomez]
    * Final patches to make JK iSeries compliant
      [hgomez]
      